Test/hofs/LambdaParsefail.dfy.expect
LambdaParsefail.dfy(5,19): error: this symbol not expected in VarDeclStatement
LambdaParsefail.dfy(6,19): error: this symbol not expected in VarDeclStatement
LambdaParsefail.dfy(7,21): error: this symbol not expected in VarDeclStatement
LambdaParsefail.dfy(8,15): error: cannot declare identifier beginning with underscore
LambdaParsefail.dfy(9,17): error: this symbol not expected in VarDeclStatement
5 parse errors detected in LambdaParsefail.dfy
